@@ -7,7 +7,6 @@ import eu.isygoit.constants.DomainConstants;
 import eu.isygoit.constants.LogConstants;
 import eu.isygoit.exception.BadArgumentException;
 import eu.isygoit.exception.EmptyListException;
-import eu.isygoit.exception.ObjectNotFoundException;
 import eu.isygoit.exception.OperationNotAllowedException;
 import eu.isygoit.filter.QueryCriteria;
 import eu.isygoit.model.ICodifiable;
@@ -15,21 +14,20 @@ import eu.isygoit.model.IIdEntity;
 import eu.isygoit.model.ISAASEntity;
 import eu.isygoit.model.jakarta.CancelableEntity;
 import eu.isygoit.repository.JpaPagingAndSortingSAASRepository;
-import jakarta.persistence.EntityExistsException;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.NotSupportedException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.cassandra.repository.CassandraRepository;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Slice;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 
 import java.lang.reflect.ParameterizedType;
-import java.util.*;
+import java.util.Date;
+import java.util.List;
+import java.util.Optional;
 
 /**
  * The type Cassandra crud service.
@@ -39,10 +37,10 @@ import java.util.*;
  * @param <R> the type parameter
  */
 @Slf4j
-public abstract class CassandraCrudService<I, T extends IIdEntity, R extends CassandraRepository> extends CrudServiceUtils<T, R>
+public abstract class CassandraCrudService<I, T extends IIdEntity, R extends CassandraRepository<T, I>> extends CrudServiceUtils<T, R>
         implements ICrudServiceMethod<I, T> {
 
-    //Attention !!! should get the class type of th persist entity
+    // Generic type of the entity class
     private final Class<T> persistentClass = (Class<T>) ((ParameterizedType) getClass().getGenericSuperclass()).getActualTypeArguments()[1];
 
     @Override
@@ -54,10 +52,10 @@ public abstract class CassandraCrudService<I, T extends IIdEntity, R extends Cas
     @Override
     @Transactional(readOnly = true)
     public Long count(String domain) {
-        if (repository() instanceof JpaPagingAndSortingSAASRepository jpaPagingAndSortingSAASRepository) {
-            return jpaPagingAndSortingSAASRepository.countByDomainIgnoreCase(domain);
+        if (repository() instanceof JpaPagingAndSortingSAASRepository) {
+            return ((JpaPagingAndSortingSAASRepository) repository()).countByDomainIgnoreCase(domain);
         } else {
-            throw new UnsupportedOperationException("this is not a SAS entity/repository: " + repository().getClass().getSimpleName());
+            throw new UnsupportedOperationException("This is not a SAAS entity/repository: " + repository().getClass().getSimpleName());
         }
     }
 
@@ -79,21 +77,10 @@ public abstract class CassandraCrudService<I, T extends IIdEntity, R extends Cas
     @Override
     @Transactional
     public T create(T object) {
-        if (Objects.isNull(object)) {
-            throw new BadArgumentException(LogConstants.NULL_OBJECT_PROVIDED);
-        }
-
-        if (Objects.isNull(object.getId())) {
-            object = this.beforeCreate(object);
-            if (this instanceof ICodifiableService codifiableService &&
-                    object instanceof ICodifiable codifiable &&
-                    !StringUtils.hasText(codifiable.getCode())) {
-                codifiableService.getNextCode().ifPresent(code -> codifiable.setCode((String) code));
-            }
-            return this.afterCreate((T) repository().save(object));
-        } else {
-            throw new EntityExistsException();
-        }
+        validateEntity(object);
+        object = beforeCreate(object);
+        setCodeIfNeeded(object);
+        return afterCreate(repository().save(object));
     }
 
     @Override
@@ -104,294 +91,201 @@ public abstract class CassandraCrudService<I, T extends IIdEntity, R extends Cas
 
     @Override
     public List<T> create(List<T> objects) {
-        if (CollectionUtils.isEmpty(objects)) {
-            throw new EmptyListException(LogConstants.EMPTY_OBJECT_LIST_PROVIDED);
-        }
+        return List.of();
+    }
 
-        return objects.stream().map(object ->
-                this.create(object)
-        ).toList();
+    @Override
+    public void delete(String senderDomain, I id) {
+
     }
 
     @Override
     @Transactional
     public T update(T object) {
-        if (Objects.isNull(object)) {
-            throw new BadArgumentException(LogConstants.NULL_OBJECT_PROVIDED);
-        }
-
-        if (Objects.nonNull(object.getId())) {
-            object = this.beforeUpdate(object);
-            if (this instanceof ICodifiableService codifiableService &&
-                    object instanceof ICodifiable codifiable &&
-                    !StringUtils.hasText(codifiable.getCode())) {
-                codifiableService.getNextCode().ifPresent(code -> codifiable.setCode((String) code));
-            }
-            return this.afterUpdate((T) repository().save(object));
-        } else {
-            throw new EntityNotFoundException();
-        }
+        validateEntity(object);
+        validateEntityId(object);
+        object = beforeUpdate(object);
+        setCodeIfNeeded(object);
+        return afterUpdate(repository().save(object));
     }
 
     @Override
-    @Transactional
     public T updateAndFlush(T object) {
-        return this.update(object);
+        return null;
     }
 
     @Override
-    @Transactional
     public List<T> update(List<T> objects) {
-        if (CollectionUtils.isEmpty(objects)) {
-            throw new EmptyListException(LogConstants.EMPTY_OBJECT_LIST_PROVIDED);
-        }
-
-        return objects.stream().map(object ->
-                this.update(object)
-        ).toList();
+        return List.of();
     }
 
     @Override
-    @Transactional
-    public void delete(String senderDomain, List<T> objects) {
-        if (CollectionUtils.isEmpty(objects)) {
-            throw new EmptyListException(LogConstants.EMPTY_OBJECT_LIST_PROVIDED);
-        }
-
-        if (ISAASEntity.class.isAssignableFrom(persistentClass)
-                && !DomainConstants.SUPER_DOMAIN_NAME.equals(senderDomain)) {
-            Optional<T> optional = objects.stream().filter(object -> !senderDomain.equals(((ISAASEntity) object).getDomain())).findFirst();
-            if (optional.isPresent()) {
-                throw new OperationNotAllowedException("Delete " + persistentClass.getSimpleName() + " with id: " + optional.get().getId());
-            }
-        }
-
-        this.beforeDelete(objects);
-        repository().deleteAll(objects);
-        this.afterDelete(objects);
+    public List<T> findAllByCriteriaFilter(String domain, List<QueryCriteria> criteria) {
+        return List.of();
     }
 
     @Override
-    @Transactional
-    public void delete(String senderDomain, I id) {
-        if (Objects.isNull(id)) {
-            throw new BadArgumentException(LogConstants.NULL_OBJECT_PROVIDED);
-        }
-
-        this.findById(id).ifPresent(object -> {
-            //For SaaS Entity, check if delete ope is allowed : super domain or same domain
-            if (ISAASEntity.class.isAssignableFrom(persistentClass)
-                    && !DomainConstants.SUPER_DOMAIN_NAME.equals(senderDomain)) {
-                if (!senderDomain.equals(((ISAASEntity) object).getDomain())) {
-                    throw new OperationNotAllowedException("Delete " + persistentClass.getSimpleName() + " with id: " + id);
-                }
-            }
-
-            //before delete ope
-            this.beforeDelete(id);
-
-            if (CancelableEntity.class.isAssignableFrom(persistentClass)
-                    || CancelableEntity.class.isAssignableFrom(persistentClass)) {
-                ((CancelableEntity) object).setCheckCancel(true);
-                ((CancelableEntity) object).setCancelDate(new Date());
-                this.update(object);
-            } else {
-                repository().deleteById(id);
-            }
-
-            //after delete ope
-            this.afterDelete(id);
-        });
-    }
-
-    @Override
-    @Transactional
-    public void delete(List<T> objects) {
-        if (ISAASEntity.class.isAssignableFrom(persistentClass)) {
-            throw new OperationNotAllowedException("Delete " + persistentClass.getSimpleName() + " should use SAAS delete");
-        }
-
-        if (CollectionUtils.isEmpty(objects)) {
-            throw new EmptyListException(LogConstants.EMPTY_OBJECT_LIST_PROVIDED);
-        }
-        this.beforeDelete(objects);
-        repository().deleteAll(objects);
-        this.afterDelete(objects);
+    public List<T> findAllByCriteriaFilter(String domain, List<QueryCriteria> criteria, PageRequest pageRequest) {
+        return List.of();
     }
 
     @Override
     @Transactional
     public void delete(I id) {
-        if (ISAASEntity.class.isAssignableFrom(persistentClass)) {
-            throw new OperationNotAllowedException("Delete " + persistentClass.getSimpleName() + " should use SAAS delete");
-        }
-
-        if (Objects.isNull(id)) {
-            throw new BadArgumentException(LogConstants.NULL_OBJECT_PROVIDED);
-        }
-
-        this.findById(id).ifPresent(object -> {
-            //before delete ope
-            this.beforeDelete(id);
-
-            if (CancelableEntity.class.isAssignableFrom(persistentClass)
-                    || CancelableEntity.class.isAssignableFrom(persistentClass)) {
-                ((CancelableEntity) object).setCheckCancel(true);
-                ((CancelableEntity) object).setCancelDate(new Date());
-                this.update(object);
-            } else {
-                repository().deleteById(id);
-            }
-
-            //after delete ope
-            this.afterDelete(id);
+        validateId(id);
+        findById(id).ifPresent(object -> {
+            beforeDelete(id);
+            performDelete(object, id);
+            afterDelete(id);
         });
     }
 
     @Override
-    public void beforeDelete(I id) {
+    @Transactional
+    public void delete(String senderDomain, List<T> objects) {
+        validateEntityList(objects);
+        checkSaaSDeletePermission(senderDomain, objects);
+        beforeDelete(objects);
+        repository().deleteAll(objects);
+        afterDelete(objects);
     }
 
     @Override
-    public void afterDelete(I id) {
+    @Transactional
+    public void delete(List<T> objects) {
+        validateEntityList(objects);
+        beforeDelete(objects);
+        repository().deleteAll(objects);
+        afterDelete(objects);
     }
 
     @Override
-    public void beforeDelete(List<T> objects) {
-    }
-
-    @Override
-    public void afterDelete(List<T> objects) {
+    @Transactional(readOnly = true)
+    public Optional<T> findById(I id) {
+        validateId(id);
+        Optional<T> optional = repository().findById(id);
+        return optional.map(this::afterFindById);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<T> findAll() {
-        if (ISAASEntity.class.isAssignableFrom(persistentClass)
-                && repository() instanceof JpaPagingAndSortingSAASRepository) {
-            log.warn("Find all give vulnerability to SAS entity...");
-        }
-
-        List<T> list = repository().findAll();
-        if (CollectionUtils.isEmpty(list)) {
-            return Collections.emptyList();
-        }
-
-        return this.afterFindAll(list);
+        return afterFindAll(repository().findAll());
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<T> findAll(Pageable pageable) {
-        if (ISAASEntity.class.isAssignableFrom(persistentClass)
-                && repository() instanceof JpaPagingAndSortingSAASRepository) {
-            log.warn("Find all give vulnerability to SAS entity...");
-        }
-
-        Slice<T> page = repository().findAll(pageable);
-        if (page.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        return this.afterFindAll(page.getContent());
-    }
-
-    @Override
-    public List<T> findAll(String domain) throws NotSupportedException {
-        if (ISAASEntity.class.isAssignableFrom(persistentClass)
-                && repository() instanceof JpaPagingAndSortingSAASRepository jpaPagingAndSortingSAASRepository) {
-            List<T> list = jpaPagingAndSortingSAASRepository.findByDomainIgnoreCase(domain);
-            if (CollectionUtils.isEmpty(list)) {
-                return Collections.emptyList();
-            }
-            return this.afterFindAll(list);
-        } else {
-            throw new NotSupportedException("find all by domain for :" + persistentClass.getSimpleName());
-        }
+        return afterFindAll(repository().findAll(pageable).getContent());
     }
 
     @Override
     public List<T> findAll(String domain, Pageable pageable) throws NotSupportedException {
-        if (ISAASEntity.class.isAssignableFrom(persistentClass)
-                && repository() instanceof JpaPagingAndSortingSAASRepository jpaPagingAndSortingSAASRepository) {
-            Page<T> page = jpaPagingAndSortingSAASRepository.findByDomainIgnoreCase(domain, pageable);
-            if (page.isEmpty()) {
-                return Collections.emptyList();
-            }
-            return this.afterFindAll(page.getContent());
-        } else {
-            throw new NotSupportedException("find all by domain for :" + persistentClass.getSimpleName());
-        }
+        return List.of();
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public Optional<T> findById(I id) throws ObjectNotFoundException {
-        if (Objects.isNull(id)) {
-            throw new BadArgumentException(LogConstants.NULL_OBJECT_PROVIDED);
+    public List<T> findAll(String domain) throws NotSupportedException {
+        if (ISAASEntity.class.isAssignableFrom(persistentClass) && repository() instanceof JpaPagingAndSortingSAASRepository) {
+            return afterFindAll(((JpaPagingAndSortingSAASRepository) repository()).findByDomainIgnoreCase(domain));
+        } else {
+            throw new NotSupportedException("find all by domain for: " + persistentClass.getSimpleName());
         }
-
-        Optional<T> optional = repository().findById(id);
-        if (optional.isPresent()) {
-            return Optional.ofNullable(this.afterFindById(optional.get()));
-        }
-
-        return Optional.empty();
     }
 
     @Override
     @Transactional
     public T saveOrUpdate(T object) {
-        if (Objects.isNull(object)) {
-            throw new BadArgumentException(LogConstants.NULL_OBJECT_PROVIDED);
-        }
-
-        if (Objects.isNull(object.getId())) { // to create
-            return this.create(object);
-        } else { //to update
-            return this.update(object);
-        }
+        validateEntity(object);
+        return (object.getId() == null) ? create(object) : update(object);
     }
 
     @Override
-    @Transactional
     public List<T> saveOrUpdate(List<T> objects) {
+        return List.of();
+    }
+
+    // Helper Methods
+    private void validateEntity(T object) {
+        if (object == null) {
+            throw new BadArgumentException(LogConstants.NULL_OBJECT_PROVIDED);
+        }
+    }
+
+    private void validateEntityId(T object) {
+        if (object.getId() == null) {
+            throw new EntityNotFoundException();
+        }
+    }
+
+    private void validateId(I id) {
+        if (id == null) {
+            throw new BadArgumentException(LogConstants.NULL_OBJECT_PROVIDED);
+        }
+    }
+
+    private void validateEntityList(List<T> objects) {
         if (CollectionUtils.isEmpty(objects)) {
             throw new EmptyListException(LogConstants.EMPTY_OBJECT_LIST_PROVIDED);
         }
-
-        return objects.stream().map(object ->
-                this.saveOrUpdate(object)
-        ).toList();
     }
 
-    @Override
+    private void setCodeIfNeeded(T object) {
+        if (object instanceof ICodifiable codifiable && !StringUtils.hasText(codifiable.getCode())) {
+            if (this instanceof ICodifiableService codifiableService) {
+                codifiableService.getNextCode().ifPresent(code -> codifiable.setCode((String) code));
+            }
+        }
+    }
+
+    private void checkSaaSDeletePermission(String senderDomain, List<T> objects) {
+        if (ISAASEntity.class.isAssignableFrom(persistentClass) && !DomainConstants.SUPER_DOMAIN_NAME.equals(senderDomain)) {
+            Optional<T> invalidDomainObject = objects.stream()
+                    .filter(object -> !senderDomain.equals(((ISAASEntity) object).getDomain()))
+                    .findFirst();
+            invalidDomainObject.ifPresent(object -> {
+                        throw new OperationNotAllowedException("Delete " + persistentClass.getSimpleName() + " with id: " + object.getId());
+                    }
+            );
+        }
+    }
+
+    private void performDelete(T object, I id) {
+        if (CancelableEntity.class.isAssignableFrom(persistentClass)) {
+            ((CancelableEntity) object).setCheckCancel(true);
+            ((CancelableEntity) object).setCancelDate(new Date());
+            update(object);
+        } else {
+            repository().deleteById(id);
+        }
+    }
+
+    // Optional Overrides
     public T beforeUpdate(T object) {
         return object;
     }
 
-    @Override
     public T afterUpdate(T object) {
         return object;
     }
 
-    @Override
     public List<T> afterFindAll(List<T> list) {
         return list;
     }
 
-    @Override
     public T afterFindById(T object) {
         return object;
     }
 
-    @Override
-    public List<T> findAllByCriteriaFilter(String domain, List<QueryCriteria> criteria) {
-        return Collections.emptyList();
+    public void beforeDelete(List<T> objects) {
     }
 
-    @Override
-    public List<T> findAllByCriteriaFilter(String domain, List<QueryCriteria> criteria, PageRequest pageRequest) {
-        return Collections.emptyList();
+    public void afterDelete(List<T> objects) {
+    }
+
+    public void beforeDelete(I id) {
+    }
+
+    public void afterDelete(I id) {
     }
 }
